<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/numero_cliente"
            android:layout_weight="0.2"/>
        <TextView android:id="@+id/numero_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mensaje"
            android:layout_weight="0.2"/>
        <TextView android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>
    </LinearLayout>

    <Button android:id="@+id/confirm"
        android:text="@string/sendWas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>